[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Objects/Projectiles/BEAMProjectile.gd" type="Script" id=1]

[node name="Beam" type="Area2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource( 1 )
laser_damage_per_tick = 6.0

[node name="Sprite" type="Sprite" parent="."]

[node name="Line2D" type="Line2D" parent="Sprite"]
z_index = 1
points = PoolVector2Array( 1, 0, 190, 0 )
width = 25.0
default_color = Color( 0.929412, 0.952941, 0.533333, 1 )

[node name="Line2D2" type="Line2D" parent="Sprite"]
z_index = 1
points = PoolVector2Array( 1, 0, 190, 0 )
width = 12.0
default_color = Color( 0.870588, 0.878431, 0.847059, 1 )

[node name="RayCast2D" type="RayCast2D" parent="Sprite"]
collision_mask = 2

[node name="DurationTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="DamageIntervalTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
[connection signal="timeout" from="DamageIntervalTimer" to="." method="_on_DamageIntervalTimer_timeout"]
